src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PartnerInvolvedContactAsync__c</fullName>
        <description>*asterisks because its calculated daily (oct 21, 2020 made it realtime).  Visibility broadened to all profiles on Aug 27, 2020
Todo: make &quot;View PI List&quot; redirect on mobile too.

This field can be used in Opportunity-based reporting to display relevant information from child Partner_Involved object using requirements socialized with the Partner Team and Analytics.


Display ordering/preference Requirements came from project a7z3s0000004SOcAAM and are:
1st Primary flag first (if its one of the 3 roles &amp;&amp; primary,  fyi we satisfy/achieve the 3 role filter in DLRS), then
2nd Referral, then
3rd Reseller, then
4th Influencer</description>
        <formula>if(
not(isblank( DLRS_last_seen_primary_PI_Ctc_Id__c )),
HYPERLINK(&apos;/&apos;+LEFT(DLRS_last_seen_primary_PI_Ctc_Id__c,18) , &quot;Primary PI: (&quot;+MID(DLRS_last_seen_primary_PI_Ctc_Id__c,19,len(DLRS_last_seen_primary_PI_Ctc_Id__c)-18) +&quot;)&quot;),

if(not(isblank( DLRS_last_seen_referral_PI_Ctc_Id__c )),
HYPERLINK(&apos;/&apos;+LEFT(DLRS_last_seen_referral_PI_Ctc_Id__c,18) , &quot;Referral PI:(&quot;+MID(DLRS_last_seen_referral_PI_Ctc_Id__c,19,len(DLRS_last_seen_referral_PI_Ctc_Id__c)-18) +&quot;)&quot;),

if(not(isblank( DLRS_last_seen_reseller_PI_Ctc_Id__c )),
HYPERLINK(&apos;/&apos;+LEFT(DLRS_last_seen_reseller_PI_Ctc_Id__c,18) , &quot;Reseller PI: (&quot;+MID(DLRS_last_seen_reseller_PI_Ctc_Id__c,19,len(DLRS_last_seen_reseller_PI_Ctc_Id__c)-18) +&quot;)&quot;) ,

if(not(isblank( DLRS_last_seen_influencer_PI_Ctc_Id__c )),
HYPERLINK(&apos;/&apos;+LEFT(DLRS_last_seen_influencer_PI_Ctc_Id__c,18), &quot;Influencer PI:(&quot;+MID(DLRS_last_seen_influencer_PI_Ctc_Id__c,19,len(DLRS_last_seen_influencer_PI_Ctc_Id__c)-18)+&quot;)&quot;),

null

)
)
)
)</formula>
        <inlineHelpText>This is a read-only summary of the Opportunity &gt; Related &gt; Partners Involved list, based on business rules for displaying one from potentially many records.  To make changes you must create/change (PI) record entries in Related &gt; &quot;Partners Involved&quot;</inlineHelpText>
        <label>Partner Involved Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This becomes a read only sys field with neo4j--organizer.na122.visual.force.com/a7z3s0000004SJSAA2 nicknameis: ORE Phase 2 (John Broad&amp;#39;s ORE requirements)  bc its maybe refd in lead/contact/convert settings and may still survive to drive PI inserts.</description>
        <inlineHelpText>This data is now captured in Partners Involved object. Contact the partner team if you have any questions.</inlineHelpText>
        <label>Old data Legacy field - do not use</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities Custom</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <description>This becomes a read only sys field with neo4j--organizer.na122.visual.force.com/a7z3s0000004SJSAA2 nicknameis: ORE Phase 2 (John Broad&amp;#39;s ORE requirements)  bc its maybe refd in lead/contact/convert settings and may still survive to drive PI inserts.</description>
        <inlineHelpText>This data is now captured in Partners Involved object. Contact the partner team if you have any questions.</inlineHelpText>
        <label>Old data Legacy field - do not use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Ownership__c</fullName>
        <description>This becomes a read only sys field with neo4j--organizer.na122.visual.force.com/a7z3s0000004SJSAA2 nicknameis: ORE Phase 2 (John Broad&amp;#39;s ORE requirements)  bc its maybe refd in lead/contact/convert settings and may still survive to drive PI inserts.</description>
        <inlineHelpText>This data is now captured in Partners Involved object. Contact the partner team if you have any questions.</inlineHelpText>
        <label>Old data Legacy field - do not use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neo4j</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Role__c</fullName>
        <description>This becomes a read only sys field with neo4j--organizer.na122.visual.force.com/a7z3s0000004SJSAA2 nicknameis: ORE Phase 2 (John Broad&amp;#39;s ORE requirements)  bc its maybe refd in lead/contact/convert settings and may still survive to drive PI inserts.</description>
        <inlineHelpText>This data is now captured in Partners Involved object. Contact the partner team if you have any questions.</inlineHelpText>
        <label>Old data Legacy field - do not use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sub Contractor</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Referral (Past Opp)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This becomes a read only sys field with neo4j--organizer.na122.visual.force.com/a7z3s0000004SJSAA2 nicknameis: ORE Phase 2 (John Broad&amp;#39;s ORE requirements)  bc its maybe refd in lead/contact/convert settings and may still survive to drive PI inserts.</description>
        <inlineHelpText>This data is now captured in Partners Involved object. Contact the partner team if you have any questions.</inlineHelpText>
        <label>Old data Legacy field - do not use</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partnership_Product_Group_Count__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trnnadia</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows how many Products from a distinct Group - &quot;Partnreship&quot;, have are attached to the Opportunity.  
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Shows how many Products from a distinct Group - &quot;Partnership&quot;, are attached to the Opportunity (Partnership).</inlineHelpText>
        <label>Partnership Product Group Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Group_Traction__c</field>
            <operation>equals</operation>
            <value>Partnership</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <inlineHelpText>(Jan9&apos;21) This field is now deprecated, because this field no longer belongs on the Opportunity. Instead use the field on the Opportunity Product line level.</inlineHelpText>
        <label>Payment Terms (deprecated jan9&apos;21)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 75</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>Net 180</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Cloud_Provider__c</fullName>
        <businessOwnerUser>kay.nair@neo4j.com.trnnadia</businessOwnerUser>
        <description>The purpose of this field is to capture data early on in the Opportunity cycle on the preferred providers used by companies we are targeting. JIRA: SFDCSPT-150; SFDCSPT-289.</description>
        <inlineHelpText>Select the preferred provider of the company in relation to this Opportunity. If the preferred provider indicated by the company is not part of the current picklist, please reach out to the Salesforce Administration team.</inlineHelpText>
        <label>Preferred Cloud Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private - Colocate</fullName>
                </value>
                <value>
                    <fullName>Private - Openshift</fullName>
                </value>
                <value>
                    <fullName>Private - Pivotal</fullName>
                </value>
                <value>
                    <fullName>Pub - Alibaba</fullName>
                </value>
                <value>
                    <fullName>Pub - AWS</fullName>
                </value>
                <value>
                    <fullName>Pub - GCP</fullName>
                </value>
                <value>
                    <fullName>Pub - IBM</fullName>
                </value>
                <value>
                    <fullName>Pub - MS Azure</fullName>
                </value>
                <value>
                    <fullName>Pub - Oracle</fullName>
                </value>
                <value>
                    <fullName>Gov - AWS</fullName>
                </value>
                <value>
                    <fullName>Gov - GCP</fullName>
                </value>
                <value>
                    <fullName>Gov - MS Azure</fullName>
                </value>
                <value>
                    <fullName>On-Prem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimeContractor_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;PrimeContractor&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;PrimeContractor&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>PrimeContractor Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Stage__c</fullName>
        <label>Prior Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_Services_Product_Count__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>This Rollup Summary field displays the total number of Professional Services Products attached to the Opportunity. JIRA: SFDCSPT-529</description>
        <inlineHelpText>Displays the total number of Professional Services Products attached to the Opportunity.</inlineHelpText>
        <label>Professional Services Product Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Professional_Services2__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prof_Services_Product_Group_Count__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trnnadia</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows how many Products from a distinct Group - &quot;Professional Services&quot;, have are attached to the Opportunity.  
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Shows how many Products from a distinct Group - &quot;Professional Services&quot;, are attached to the Opportunity (Professional Services: Consulting, Innovation Lab, Training).</inlineHelpText>
        <label>Prof. Services Product Group Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Group_Traction__c</field>
            <operation>equals</operation>
            <value>Professional Services</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Date__c</fullName>
        <label>Qualification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebillable_Expenses_Limit__c</fullName>
        <description>for finance</description>
        <label>Rebillable Expenses Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebillable_Expenses__c</fullName>
        <description>Finance field</description>
        <label>Rebillable Expenses?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Cannot_be_Saved__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trnnadia</businessOwnerUser>
        <defaultValue>false</defaultValue>
        <description>This field is used for validation workarounds on the backend. For Admins only. There is more than one field of this type. Even though it&apos;s possible to use the same field in multiple validations, it may not be possible to do so in other cases. JIRA: SFDCSPT-301</description>
        <inlineHelpText>This field is intended for admin use only.</inlineHelpText>
        <label>Record Cannot be Saved #1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recorded_Opp_Date__c</fullName>
        <label>Recorded Opp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recorded_Opp__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <description>Used for official tracking of New and Cross-Sell Opportunities in ‘Qualification’ (10%) Stage. Sales Ops and Analytics review all Opportunities that have reached this or later stages with Subscription Products tagged as either New or Cross-sell on a monthly basis. Opportunities that pass the review are &apos;recorded&apos; into three different segments depending on the prospect Account annual revenue (at the corporate family level): 1) &apos;Startup&apos; for $0-10M, 2) &apos;Corporate&apos; for $10M - $1B, and 3) &apos;Enterprise&apos; for $1B+ or federal Accounts. Opportunities that don’t pass the review, are tagged using one of the picklist values that start with ‘Not Qualified’. These Opportunities are excluded from any official counts for 10% Opportunities used for internal or external reporting. JIRA: SFDCSPT-453</description>
        <inlineHelpText>Indicates the final Sales Ops approval call for New and Cross-Sell Opportunities in the &apos;Qualification (10%)&apos; Stage. Approved and officially recorded Opportunities are split by revenue segment. Not Qualified Opportunities are coupled with the reason that applies.</inlineHelpText>
        <label>Recorded Opp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Startup</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Non ARR</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Partnership</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Revenue Type</fullName>
                </value>
                <value>
                    <fullName>Not Qualified - Startup Rev and Product</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                    <isActive>false</isActive>
                    <label>Mid-Market</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Referral&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Referral&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Referral Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RenewalBase__c</fullName>
        <businessOwnerGroup>Renewals</businessOwnerGroup>
        <description>This value is used to calculate our projected/forecasted renewal rate leading up to an Opportunity renewal. This field is updated from the RCC and also used in SFDC reports as well as RCC reports. JIRA: SFDCSPT-506</description>
        <inlineHelpText>The amount of ARR the Renewals Team is tasked with renewing before the subscription expiration date. This represents the Renewals Team quota for this Opportunity. This field is updated from the RCC and also used in SFDC reports as well as RCC reports. Data owned by Renewals.</inlineHelpText>
        <label>Renewal Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Driver__c</fullName>
        <businessOwnerUser>mike.brophy@neo4j.com.trnnadia</businessOwnerUser>
        <description>Requested by the Renewals Team. Allows Renewals and Sales to ensure clear team ownership of Opportunities.
JIRA: SFDCSPT-214</description>
        <inlineHelpText>Allows Renewals and Sales to ensure clear team ownership of Opportunities.</inlineHelpText>
        <label>Renewal Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AE-Driven</fullName>
                </value>
                <value>
                    <fullName>RM-Driven</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Terms_End_Date__c</fullName>
        <formula>DATE(
year( Term_End_Date__c )
+ floor((month(Term_End_Date__c) +  Contract_Terms__c )/12) + if(and(month(Term_End_Date__c)=12,Contract_Terms__c&gt;=12),-1,0)
,
if( mod( month(Term_End_Date__c) + Contract_Terms__c, 12 ) = 0, 12 , mod( month(Term_End_Date__c) + Contract_Terms__c, 12 ))
,
min(
day(Term_End_Date__c),
case(
max( mod( month(Term_End_Date__c) + Contract_Terms__c, 12 ) , 1),
9,30,
4,30,
6,30,
11,30,
2,if(mod((year(Term_End_Date__c)
+ floor((month(Term_End_Date__c) + Contract_Terms__c)/12) + if(and(month(Term_End_Date__c)=12,Contract_Terms__c&gt;=12),-1,0)),4)=0,29,28),
31
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Terms End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms_Start_Date__c</fullName>
        <formula>DATE( 
year(  Term_Start_Date__c  ) 
+ floor((month(Term_Start_Date__c ) + Contract_Terms__c )/12) + if(and(month(Term_Start_Date__c )=12,Contract_Terms__c&gt;=12),-1,0) 
, 
if( mod( month(Term_Start_Date__c ) + Contract_Terms__c, 12 ) = 0, 12 , mod( month(Term_Start_Date__c ) + Contract_Terms__c, 12 )) 
, 
min( 
day(Term_Start_Date__c ), 
case( 
max( mod( month(Term_Start_Date__c ) + Contract_Terms__c, 12 ) , 1), 
9,30, 
4,30, 
6,30, 
11,30, 
2,if(mod((year(Term_Start_Date__c ) 
+ floor((month(Term_Start_Date__c ) + Contract_Terms__c)/12) + if(and(month(Term_Start_Date__c )=12,Contract_Terms__c&gt;=12),-1,0)),4)=0,29,28), 
31 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Terms Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewals_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the User object. Requested by the Renewals Team. Allows Renewals leaders to assign a &quot;Renewals Manager&quot; to Opportunities.
JIRA: SFDCSPT-113</description>
        <inlineHelpText>Who is the Renewals Manager for this Opportunity?</inlineHelpText>
        <label>Renewals Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesRenewalsManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reseller_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Reseller&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Reseller&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Reseller Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Consider_Updates_After__c</fullName>
        <label>Consider Updates After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_App_Field__c</fullName>
        <label>RingLead App Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Processed_Count__c</fullName>
        <label>Processed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_User_Opp_Owner__c</fullName>
        <description>created to use in dynamic reports where opp owner = running user</description>
        <formula>IF( Owner.Id  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Z_Running User: Opp Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Running_User_SDR__c</fullName>
        <description>Evaluates to 1 if running user is the user listed on the Sales Development field. This was created to create a dynamic report for SDR&apos;S to see their opps.</description>
        <formula>IF(Sales_Development_Rep__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_Running User: SDR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Opp_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Opp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Development_ID__c</fullName>
        <label>Sales Development ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Development_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Development Rep</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>This field can only be populated with Sales Development Reps</errorMessage>
            <filterItems>
                <field>User.UserRole.Id</field>
                <operation>equals</operation>
                <value>00E6A000001AphE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Source&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Source&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Source Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <businessOwnerUser>lance.kaji@neotechnology.com.trnnadia</businessOwnerUser>
        <description>This field was requested by Sales Operations as a way to capture any special terms that are part of the deal, such as special pricing, price freeze or one-time discounts. JIRA: SFDCSPT-235. (Jan9&apos;21) was incorrectlyDeprecated, Re-established on opp on 2021-01-12T12:52:17-0800</description>
        <label>Special Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage_Change_Date__c</fullName>
        <label>Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Days__c</fullName>
        <formula>TODAY() -  Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stop_Recursion_in_Renewal_Opp_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Keep this hidden from everyone. Added in Stage Project (SFDC-0143) to prevent recursion we witnessed after refactoring process flows for renewal Opportunity and renewal Opportunity Product creation (during finance impersonated testing of moving Stage from Finance Review to Closed Won we saw Maximum flow depth exceeded in the process builder that cloned lines, which others in the world have seen with orders/order lines, so this flag helps us prevent that recurison! FLS limited to SysAdmin because PB runs in system mode.</description>
        <inlineHelpText>This flag added in Added in Stage Project (SFDC-0143) to prevent recursion in renewal Opportunity creation logic.</inlineHelpText>
        <label>Stop Recursion in Renewal Opp Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Contractor_Partner_Involved_Account__c</fullName>
        <description>As of writing,  Automatically populated based on whichever Account was most recently tagged as &quot;Sub Contractor&quot; within Opportunity &gt; Related &gt; Partners Involved listing (BY DLRS ROLLUP) &amp;&amp; hidden from layouts because layout inclusion would only raise questions about being unable to edit this.  Operations needed to Report on this in Opportunity based reports.</description>
        <inlineHelpText>Automatically populated based on whichever Account was most recently tagged as &quot;Sub Contractor&quot; within Opportunity &gt; Related &gt; Partners Involved listing.</inlineHelpText>
        <label>Sub Contractor Partner Involved Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Group_Count__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trnnadia</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows how many Products from a distinct Group -- Subscription, have are attached to the Opportunity.  
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Shows how many Products from a distinct Group - &quot;Subscription&quot;, are attached to the Opportunity (Subscription: GraphDataScience, OEM, Startup, Discovery, Advanced, Business, Enterprise, Aura Enterprise, Bloom, Kerberos, Linkurious).</inlineHelpText>
        <label>Subscription Product Group Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Group_Traction__c</field>
            <operation>equals</operation>
            <value>Subscription</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sugar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sugar ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sugar_Order_No__c</fullName>
        <label>Sugar Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Product_Group_Count__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trnnadia</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows how many Products from a distinct Group - &quot;Support&quot;, have are attached to the Opportunity.  
JIRA: SFDCSPT-96</description>
        <inlineHelpText>Shows how many Products from a distinct Group - &quot;Support&quot;, are attached to the Opportunity (Support: Dedicated, Enterprise, Managed Services, OEM, Platinum).</inlineHelpText>
        <label>Support Product Group Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Group_Traction__c</field>
            <operation>equals</operation>
            <value>Support</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TCV_USD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TCV USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_End_Date_First_Subscription_OLI__c</fullName>
        <description>Populated with the &quot;Term End Date&quot; of the first Subscription Opportunity Line Item added to the Opportunity. Used in various automation processes. JIRA: SFDCSPT-304&quot;</description>
        <inlineHelpText>Populated with the &quot;Term End Date&quot; of the first Subscription Opportunity Line Item added to the Opportunity.</inlineHelpText>
        <label>Term End Date (First Subscription OLI)</label>
        <type>Date</type>
    </fields>
</CustomObject>